# geektime-bootcamp-ai-fock

./: .pre-commit-config.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pre-commit.yml
site/src/layouts/: MaterialLayout.astro
specs/site/: instructions.md
specs/w1/: 0001-spec-by-claude.md  0001-spec.md  0002-implementation-plan-by-claude.md  0002-implementation-plan.md  instructions.md
specs/w4/: codex-arch-by-claud-code-kimi.md  instructions.md
specs/w5/: 0007-pg-mcp-test-plan.md  0008-pg-mcp-test-plan-review.md
w1/project-alpha/: .gitignore  .prettierignore  README.md  start.sh
w1/project-alpha/backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  seed.sql
w1/project-alpha/backend/alembic/: env.py
w1/project-alpha/backend/alembic/versions/: 03d3b68cc05c_initial_migration.py  304e9d58e19f_add_triggers_for_updated_at_and_.py
w1/project-alpha/backend/app/: __init__.py  config.py  database.py  main.py
w1/project-alpha/backend/app/api/: __init__.py  tags.py  tickets.py
w1/project-alpha/backend/app/crud/: __init__.py  tag.py  ticket.py
w1/project-alpha/backend/app/models/: __init__.py  tag.py  ticket.py
w1/project-alpha/backend/app/schemas/: __init__.py  tag.py  ticket.py
w1/project-alpha/backend/app/utils/: color_generator.py
w1/project-alpha/backend/tests/: conftest.py  test_tags.py  test_tickets.py
w1/project-alpha/docs/: CHANGELOG.md  api.md  ci-cd-setup.md  pre-commit-setup.md  setup.md  test.rest  user-guide.md
w1/project-alpha/frontend/: README.md  (+1 more)
w3/: codex_by_cc.md
(+55 files in other folders)
